# src/main/resources/openapi/documentation.yaml
@@ -6,6 +6,15 @@ info:
 servers:
 - url: "http://localhost:8080"
 paths:
+  /{...}:
+    options:
+      description: ""
+      parameters:
+      - name: "..."
+        in: "path"
+        required: true
+        schema:
+          type: "string"
   /session/increment:
     get:
       description: ""
@@ -26,7 +35,7 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "array"
                 items:
@@ -35,7 +44,7 @@ paths:
       description: ""
       requestBody:
         content:
-          '*/*':
+          'application/json' :
             schema:
               $ref: "#/components/schemas/ItemCreateRequest"
         required: true
@@ -43,13 +52,13 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 $ref: "#/components/schemas/ItemDTO"
         "500":
           description: "Internal Server Error"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "object"
   /api/items/{id}:
@@ -65,19 +74,19 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 $ref: "#/components/schemas/ItemDTO"
         "404":
           description: "Not Found"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "object"
         "500":
           description: "Internal Server Error"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "object"
     get:
@@ -92,13 +101,13 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 $ref: "#/components/schemas/ItemDTO"
         "404":
           description: "Not Found"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "object"
     put:
@@ -111,7 +120,7 @@ paths:
           type: "integer"
       requestBody:
         content:
-          '*/*':
+          'application/json' :
             schema:
               $ref: "#/components/schemas/ItemUpdateRequest"
         required: true
@@ -119,19 +128,19 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 $ref: "#/components/schemas/ItemDTO"
         "404":
           description: "Not Found"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "object"
         "500":
           description: "Internal Server Error"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "object"
   /api/orders:
@@ -141,7 +150,7 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "array"
                 items:
@@ -150,21 +159,27 @@ paths:
       description: ""
       requestBody:
         content:
-          '*/*':
+          'application/json' :
             schema:
               $ref: "#/components/schemas/OrderCreateRequest"
         required: true
       responses:
+        "404":
+          description: "Not Found"
+          content:
+            'application/json' :
+              schema:
+                type: "object"
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 $ref: "#/components/schemas/OrderDTO"
         "500":
           description: "Internal Server Error"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "object"
   /api/orders/{id}:
@@ -176,22 +191,17 @@ paths:
         required: true
         schema:
           type: "string"
-      - name: "uuid"
-        in: "query"
-        required: true
-        schema:
-          type: "string"
       responses:
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 $ref: "#/components/schemas/OrderDTO"
         "404":
           description: "Not Found"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "object"
     put:
@@ -202,14 +212,9 @@ paths:
         required: true
         schema:
           type: "string"
-      - name: "uuid"
-        in: "query"
-        required: true
-        schema:
-          type: "string"
       requestBody:
         content:
-          '*/*':
+          'application/json' :
             schema:
               $ref: "#/components/schemas/OrderUpdateRequest"
         required: true
@@ -217,30 +222,25 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 $ref: "#/components/schemas/OrderDTO"
         "404":
           description: "Not Found"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "object"
         "500":
           description: "Internal Server Error"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "object"
   /api/orders/{id}/items:
     get:
       description: ""
       parameters:
-      - name: "uuid"
-        in: "query"
-        required: true
-        schema:
-          type: "string"
       - name: "id"
         in: "path"
         required: true
@@ -250,19 +250,15 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/OrderItemDTO"
-    post:
+  /api/orders/{id}/status:
+    put:
       description: ""
       parameters:
-      - name: "uuid"
-        in: "query"
-        required: true
-        schema:
-          type: "string"
       - name: "id"
         in: "path"
         required: true
@@ -270,23 +266,29 @@ paths:
           type: "string"
       requestBody:
         content:
-          '*/*':
+          'application/json' :
             schema:
-              $ref: "#/components/schemas/OrderItemCreateRequest"
+              $ref: "#/components/schemas/OrderUpdateStatusRequest"
         required: true
       responses:
-        "500":
-          description: "Internal Server Error"
-          content:
-            '*/*':
-              schema:
-                type: "object"
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
-                $ref: "#/components/schemas/OrderItemDTO"
+                $ref: "#/components/schemas/OrderDTO"
+        "404":
+          description: "Not Found"
+          content:
+            'application/json' :
+              schema:
+                type: "object"
+        "500":
+          description: "Internal Server Error"
+          content:
+            'application/json' :
+              schema:
+                type: "object"
   /api/test:
     get:
       description: ""
@@ -307,18 +309,9 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            'application/json' :
               schema:
                 type: "string"
-  /{...}:
-    options:
-      description: ""
-      parameters:
-      - name: "..."
-        in: "path"
-        required: true
-        schema:
-          type: "string"
 components:
   schemas:
     ItemDTO:
@@ -409,8 +402,6 @@ components:
     OrderCreateRequest:
       type: "object"
       properties:
-        purchaseDate:
-          $ref: "#/components/schemas/LocalDateTime"
         firstName:
           type: "string"
         lastName:
@@ -429,15 +420,13 @@ components:
           type: "string"
         secondAddress:
           type: "string"
-        totalPrice:
-          type: "number"
-          format: "float"
-        status:
-          type: "string"
         userIp:
           type: "string"
         userAgent:
           type: "string"
+        cart:
+          type: "integer"
+          format: "int32"
     OrderUpdateRequest:
       type: "object"
       properties:
@@ -475,8 +464,8 @@ components:
         itemAmount:
           type: "integer"
           format: "int32"
-    OrderItemCreateRequest:
+    OrderUpdateStatusRequest:
       type: "object"
       properties:
-        orderItemDTO:
-          $ref: "#/components/schemas/OrderItemDTO"
+        status:
+          type: "string"
